# tech_daily_news

./: .gitignore  README.md  crawl.py  main.py  main_app.py  main_dom.py  models.py  prompts.py  pyproject.toml
app/adapters/: crawl4ai_scraper.py  langchain_llm_adapter.py  mock_dbhandler.py  mock_email_sender.py  prompts.py
app/domain/: domain_utils.py  newsletter_utils.py
app/ports/: dbhandler.py  email_sender.py  llm.py  models.py  scraper.py
src/: bounding_box_handler.py  browser_session_handler.py  dom_processor.py  llm.py  models.py  newsletter_utils.py  playwright_scraper.py  prompts.py  session_tools.py  vlm.py
